--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,19 @@
   "manifest_version": 2,
 
   "name": "SPS Source Formatter",
-  "description": "This extension reformats the Seattle Schools website \"The Source\" (https://ps.seattleschools.org/public/). It's completely unofficial so don't contact Seattle Schools if something is broken.",
+  "description": "This extension reformats the Seattle Schools website \"The Source\". It's unofficial so don't contact Seattle Schools if its broken.",
   "version": "1.0",
+  "icons": {
+     "16": "icon.png",
+     "48": "icon48.png",
+     "128": "icon128.png" 
+  },
 
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  
   "permissions": [
     "activeTab",
     "storage"
